<resources>

    <string name="app_name">Traxists</string>

    <!-- fragment_add_or_delete_admin strings -->
    <string name="add_or_delete">Add or Delete\nAdmin Account</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>

    <!-- fragment_api_logins strings -->
    <string name="api_logins">API Logins</string>
    <string name="Facebook">Facebook</string>
    <string name="Twitter">Twitter</string>
    <string name="Instagram">Instagram</string>
    <string name="Google">Google</string>

    <!-- fragment_api_logouts strings -->
    <string name="api_logouts">API Logouts</string>
    <string name="traxist_logout">Traxist Logout</string>
    <string name="warning">"Your admin will be \nnotified if you log out."</string>

    <!-- fragment_confirm_password strings -->
    <string name="confirm">Confirm</string>

    <!-- fragment_enter_username_and_password strings -->
    <string name="login_setup">Login Setup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>

    <!-- fragment confirm_password strings -->
    <string name="reenter_password">ReEnter Password</string>

    <!-- fragment_login strings -->
    <string name="enter">Enter</string>

    <!-- fragment_recovery_question strings -->
    <string name="recovery">Recovery</string>
    <string name="question_1">What is your full name?</string>
    <string name="question_2">What is your birthday\n(MM/DD/YYYY)?</string>
    <string name="question_3">What is your favorite\nnumber under 127?</string>

    <!-- fragment_select_acc_type strings -->
    <string name="select_acc_type">Account Type</string>
    <string name="creator">Creator</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="create_account">Create</string>

    <!-- Facebook App ID -->
    <string name="facebook_app_id">493414397483013</string>

    <!-- Google APIs Key -->
    <string name="google_api_key">AIzaSyASx_KobkiHmFZ674I8dtzyPTNAyKcP4aM</string>



</resources>
