<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_recovery_questions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/background_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginSize_extraSmall"
        android:layout_marginTop="@dimen/marginSize_medium"
        android:text="@string/recovery"
        android:textStyle="bold"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/recovery_question_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/question_1" />

    <EditText
        android:id="@+id/recovery_question_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/question_2" />

    <EditText
        android:id="@+id/recovery_question_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/question_3"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/recovery_prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"/>

        <Button
            android:id="@+id/recovery_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>

    </TableRow>

</LinearLayout>