<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_add_or_delete_admins"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/background_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginSize_small"
        android:text="@string/add_or_delete"
        android:textSize="@dimen/fontSize_large"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/add_or_delete_admin_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"/>

    <Button
        android:id="@+id/add_or_delete_admin_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <Button
        android:id="@+id/add_or_delete_admin_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"/>

    <Button
        android:id="@+id/creator_logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSize_medium"
        android:text="@string/traxist_logout" />


</LinearLayout>