<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_select_acc_type"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_blue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/marginSize_extraSmall"
        android:gravity="center"
        android:text="@string/select_acc_type"
        android:textStyle="bold"
        android:textSize="@dimen/fontSize_large"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/selected_creator_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/creator"/>

            <RadioButton
                android:id="@+id/selected_admin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/admin"/>

            <RadioButton
                android:id="@+id/selected_user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/user"/>

        </RadioGroup>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/go_to_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"/>

            <Button
                android:id="@+id/go_to_create_account_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"/>

        </TableRow>

    </TableLayout>

</LinearLayout>
