<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_enter_username_and_password"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/background_blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/marginSize_large"
        android:layout_marginBottom="@dimen/marginSize_small"
        android:gravity="center"
        android:text="@string/login_setup"
        android:textStyle="bold"
        android:textSize="@dimen/fontSize_large"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/login_setup_prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev"/>

            <Button
                android:id="@+id/login_setup_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"/>

        </TableRow>

    </TableLayout>

</LinearLayout>